@@ -5,11 +5,11 @@ Description: Barzilai-Borwein Spectral Methods for solving nonlinear system of
  constraints.
 Depends: R (>= 2.6.1)
 Suggests: numDeriv, setRNG
-Version: 2008.7-1
-Date: 2008-7-26
+Version: 2008.8-1
+Date: 2008-8-04
 LazyLoad: yes
 License: GPL-3
 Author: Ravi Varadhan
 Maintainer: Ravi Varadhan and Paul Gilbert <pgilbert@bank-banque-canada.ca>
 URL: http://www.jhsph.edu/agingandhealth/People/Faculty/Varadhan.html
-Packaged: Sat Jul 26 09:15:36 2008; paul
+Packaged: Mon Aug  4 21:41:57 2008; paul
